# openai-responses-rs

./: Cargo.toml  README.md
src/: lib.rs  types.rs
src/types/: config.rs  helpers.rs  item.rs  request.rs  response.rs  stream.rs  tools.rs
