[package]
license = "MIT"
edition = "2024"
version = "0.1.6"
readme = "README.md"
name = "openai_responses"
authors = ["Miguel Piedrafita <rust@miguel.build>"]
description = "Rust SDK for the OpenAI Responses API"
homepage = "https://github.com/m1guelpf/openai-responses-rs"
keywords = ["openai", "async", "openapi", "ai", "responses"]
repository = "https://github.com/m1guelpf/openai-responses-rs"
categories = ["api-bindings", "web-programming", "asynchronous"]

[dependencies]
macon = "1.3.0"
thiserror = "2.0.12"
serde_json = "1.0.140"
futures = { version = "0.3.31", optional = true }
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
async-fn-stream = { version = "0.2.2", optional = true }
reqwest-eventsource = { version = "0.6.0", optional = true }
reqwest = { version = "0.12.14", features = ["json"], default-features = false }

[features]
default = ["rustls", "stream"]
# Enable streaming responses
stream = ["dep:reqwest-eventsource", "dep:futures", "dep:async-fn-stream"]
# Enable rustls for TLS support
rustls = ["reqwest/rustls-tls-native-roots"]
# Enable rustls and webpki-roots
rustls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
# Enable native-tls for TLS support
native-tls = ["reqwest/native-tls"]
# Remove dependency on OpenSSL
native-tls-vendored = ["reqwest/native-tls-vendored"]

[dev-dependencies]
tokio = { version = "1.44.1", features = ["macros", "rt", "rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true
